## top diretory

# use the ACLOCAL_FLAGS env var when rerunning aclocal
ACLOCAL_FLAGS =
ACLOCAL_AMFLAGS = ${ACLOCAL_FLAGS}

SUBDIRS= gtkgl examples docs # build

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = gtkgl-2.0.pc

EXTRA_DIST = \
  gtkgl-2.0.pc.in \
  gtkglarea.spec.in \
  gtkglarea.spec

